--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="col-12">
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
-            <a href="index.html" class="logo">
+            <a href="#top" class="logo">
               <img src="assets/images/Logo1.png" width="233.7" height="78.75" href="index.html">
             </a>
             <!-- ***** Logo End ***** -->
