--- a/index.html
+++ b/index.html
@@ -169,13 +169,13 @@
         </div>
         <div class="col-lg-6 wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s">
           <div class="section-heading">
-            <h2>Grow your website with our <em>SEO</em> service &amp; <span>Project</span> Ideas</h2>
-            <p>Space Dynamic HTML5 template is free to use for your website projects. However, you are not permitted to redistribute the template ZIP file on any CSS template collection websites. Please contact us for more information. Thank you for your kind cooperation.</p>
+            <h2>Why Rakshati for<em>Insurance</em> &amp; <span>Safety</span></h2>
+            <p>Insert Information Here</p>
           </div>
           <div class="row">
             <div class="col-lg-12">
               <div class="first-bar progress-skill-bar">
-                <h4>Website Analysis</h4>
+                <h4>Header 1</h4>
                 <span>84%</span>
                 <div class="filled-bar"></div>
                 <div class="full-bar"></div>
@@ -183,7 +183,7 @@
             </div>
             <div class="col-lg-12">
               <div class="second-bar progress-skill-bar">
-                <h4>SEO Reports</h4>
+                <h4>Header 2</h4>
                 <span>88%</span>
                 <div class="filled-bar"></div>
                 <div class="full-bar"></div>
@@ -191,7 +191,7 @@
             </div>
             <div class="col-lg-12">
               <div class="third-bar progress-skill-bar">
-                <h4>Page Optimizations</h4>
+                <h4>Header 3</h4>
                 <span>94%</span>
                 <div class="filled-bar"></div>
                 <div class="full-bar"></div>
