--- a/index.html
+++ b/index.html
@@ -81,9 +81,23 @@
                 <h6>Welcome to Rakshati</h6>
                 <h2>We Provide <em>Insurance</em> with <span>Ease</span> </h2>
                 <p>Insert Lines Here</p>
-                <div class="btn-box">
-                  <a href="#contact" class="btn-1">Contact Us</a>
-                </div>
+                <div class="d_flex flex_wrap flex_Top">
+                  <a href="https://apps.apple.com/in/app/square-insurance/id1549182208"
+                      class="mb_15 d_flex flex_Middel app_btn theme_graadint_background px_10 py_5 mr_15 text_left">
+                      <span><img src="https://www.squareinsurance.in/assets/newdesign/images/home_page/apple-icon.png"
+                              alt="iOS mobile app"></span>
+                      <span class="pl_15 fs_18 text_white d_flex flex_End flex_Middel flex_column">Available
+                              on APP STORE</span>
+                  </a>
+                  <a href="https://play.google.com/store/apps/details?id=com.square.squareinsurance"
+                      class="mb_15 d_flex flex_Middel app_btn background_whites px_10 py_5 text_left">
+                      <span><img src="https://www.squareinsurance.in/assets/newdesign/images/home_page/g-play-icon.png"
+                              alt="android mobile app"></span>
+                      <span
+                          class="pl_15 fs_18 text_blue d_flex flex_Start flex_Middel flex_column text_left">Available
+                              on PLAY STORE </span>
+                  </a>
+              </div>
               </div>
             </div>
             <div class="col-lg-6">
@@ -169,13 +183,13 @@
         </div>
         <div class="col-lg-6 wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s">
           <div class="section-heading">
-            <h2>Why Rakshati for<em>Insurance</em> &amp; <span>Safety</span></h2>
-            <p>Insert Information Here</p>
+            <h2>Grow your website with our <em>SEO</em> service &amp; <span>Project</span> Ideas</h2>
+            <p>Space Dynamic HTML5 template is free to use for your website projects. However, you are not permitted to redistribute the template ZIP file on any CSS template collection websites. Please contact us for more information. Thank you for your kind cooperation.</p>
           </div>
           <div class="row">
             <div class="col-lg-12">
               <div class="first-bar progress-skill-bar">
-                <h4>Header 1</h4>
+                <h4>Website Analysis</h4>
                 <span>84%</span>
                 <div class="filled-bar"></div>
                 <div class="full-bar"></div>
@@ -183,7 +197,7 @@
             </div>
             <div class="col-lg-12">
               <div class="second-bar progress-skill-bar">
-                <h4>Header 2</h4>
+                <h4>SEO Reports</h4>
                 <span>88%</span>
                 <div class="filled-bar"></div>
                 <div class="full-bar"></div>
@@ -191,7 +205,7 @@
             </div>
             <div class="col-lg-12">
               <div class="third-bar progress-skill-bar">
-                <h4>Header 3</h4>
+                <h4>Page Optimizations</h4>
                 <span>94%</span>
                 <div class="filled-bar"></div>
                 <div class="full-bar"></div>
@@ -214,7 +228,7 @@
       </div>
       <div class="row">
         <div class="col-lg-3 col-sm-6">
-          <a href="#">
+          <a>
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
               <div class="hidden-content">
                 <h4>SEO Analysis</h4>
@@ -227,7 +241,7 @@
           </a>
         </div>
         <div class="col-lg-3 col-sm-6">
-          <a href="#">
+          <a>
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.4s">
               <div class="hidden-content">
                 <h4>Website Reporting</h4>
@@ -240,7 +254,7 @@
           </a>
         </div>
         <div class="col-lg-3 col-sm-6">
-          <a href="#">
+          <a>
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.5s">
               <div class="hidden-content">
                 <h4>Performance Tests</h4>
@@ -253,7 +267,7 @@
           </a>
         </div>
         <div class="col-lg-3 col-sm-6">
-          <a href="#">
+          <a>
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.6s">
               <div class="hidden-content">
                 <h4>Data Analysis</h4>
@@ -268,80 +282,7 @@
       </div>
     </div>
   </div>
-
-  <div id="blog" class="our-blog section">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.25s">
-          <div class="section-heading">
-            <h2>Check Out What Is <em>Trending</em> In Our Latest <span>News</span></h2>
-          </div>
-        </div>
-        <div class="col-lg-6 wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.25s">
-          <div class="top-dec">
-            <img src="assets/images/blog-dec.png" alt="">
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-6 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.25s">
-          <div class="left-image">
-            <a href="#"><img src="assets/images/big-blog-thumb.jpg" alt="Workspace Desktop"></a>
-            <div class="info">
-              <div class="inner-content">
-                <ul>
-                  <li><i class="fa fa-calendar"></i> 24 Mar 2021</li>
-                  <li><i class="fa fa-users"></i> TemplateMo</li>
-                  <li><i class="fa fa-folder"></i> Branding</li>
-                </ul>
-                <a href="#"><h4>SEO Agency &amp; Digital Marketing</h4></a>
-                <p>Lorem ipsum dolor sit amet, consectetur and sed doer ket eismod tempor incididunt ut labore et dolore magna...</p>
-                <div class="main-blue-button">
-                  <a href="#">Discover More</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.25s">
-          <div class="right-list">
-            <ul>
-              <li>
-                <div class="left-content align-self-center">
-                  <span><i class="fa fa-calendar"></i> 18 Mar 2021</span>
-                  <a href="#"><h4>New Websites &amp; Backlinks</h4></a>
-                  <p>Lorem ipsum dolor sit amsecteturii and sed doer ket eismod...</p>
-                </div>
-                <div class="right-image">
-                  <a href="#"><img src="assets/images/blog-thumb-01.jpg" alt=""></a>
-                </div>
-              </li>
-              <li>
-                <div class="left-content align-self-center">
-                  <span><i class="fa fa-calendar"></i> 14 Mar 2021</span>
-                  <a href="#"><h4>SEO Analysis &amp; Content Ideas</h4></a>
-                  <p>Lorem ipsum dolor sit amsecteturii and sed doer ket eismod...</p>
-                </div>
-                <div class="right-image">
-                  <a href="#"><img src="assets/images/blog-thumb-01.jpg" alt=""></a>
-                </div>
-              </li>
-              <li>
-                <div class="left-content align-self-center">
-                  <span><i class="fa fa-calendar"></i> 06 Mar 2021</span>
-                  <a href="#"><h4>SEO Tips &amp; Digital Marketing</h4></a>
-                  <p>Lorem ipsum dolor sit amsecteturii and sed doer ket eismod...</p>
-                </div>
-                <div class="right-image">
-                  <a href="#"><img src="assets/images/blog-thumb-01.jpg" alt=""></a>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+</div>
 
   <div id="contact" class="contact-us section">
     <div class="container">
@@ -351,7 +292,7 @@
             <h2>Feel Free To Send Us a Message About Your Website Needs</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doer ket eismod tempor incididunt ut labore et dolores</p>
               <div class="maps align-self-center wow fadeInLeft">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14014.34087451757!2d77.14936386015293!3d28.582215506378308!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d1d1c79c8edb3%3A0x981d1a21e78f3f6e!2sTHE%20AIR%20FORCE%20SCHOOL%2C%20SUBROTO%20PARK!5e0!3m2!1sen!2sin!4v1679566875189!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14014.34087451757!2d77.14936386015293!3d28.582215506378308!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d1d1c79c8edb3%3A0x981d1a21e78f3f6e!2sTHE%20AIR%20FORCE%20SCHOOL%2C%20SUBROTO%20PARK!5e0!3m2!1sen!2sin!4v1679566875189!5m2!1sen!2sin" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             <div class="phone-info">
               <h4>For any enquiry, Call Us: <span><i class="fa fa-phone"></i> <a href="#">010-020-0340</a></span></h4>
@@ -359,7 +300,7 @@
           </div>
         </div>
         <div class="col-lg-6 wow fadeInRight" data-wow-duration="0.5s" data-wow-delay="0.25s">
-          <form id="contact" action="" method="post">
+          <form id="contact" action="form.php" method="post">
             <div class="row">
               <div class="col-lg-6">
                 <fieldset>
