--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
               </div>
               <div class="col-lg-12">
                 <fieldset>
-                  <button type="submit" id="form-submit" class="main-button ">Send Message</button>
+                  <button type="submit" name="submit" id="form-submit" class="main-button ">Send Message</button>
                 </fieldset>
               </div>
             </div>
