--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d219.22982319962065!2d77.0725037!3d28.4591465!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d18ef3fd6c5fd%3A0x766bb5b48c5fb517!2sThe%20Circle%20-%20Huda%20City%20Centre!5e0!3m2!1sen!2sin!4v1679733220822!5m2!1sen!2sin" style="border: 10px;;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             <div class="phone-info">
-              <h4>For any enquiry, Call Us: <span><i class="fa fa-phone"></i>+91 76984 58164</span></h4>
+              <h4>For any enquiry, Call Us: <span><i class="fa fa-phone"><a href="https://wa.me/917698458164"></i>+91 76984 58164</a></span></h4>
             </div>
           </div>
         </div>
