--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <h4>Personal Insurance</h4>
                 <p>To provide the best of care for you and your loved ones, Rakshati provides a wide range of
                   plans and portfolios to cover for any and all unforeseen events. Ranging from a general health
-                  insurance plan to provide for all your automobile needs, we’ve got you covered.</p>
+                  insurance plan to provide for all your automobile needs, we’ve got you covered. <br>click to know more!</p>
               </div>
               <button type="button" class="showed-content">
                 <img src="assets/images/fam.png" alt=""/>
@@ -240,7 +240,7 @@
                 <h4>Commercial Insurance</h4>
                 <p>Businesses come with anticipatable and likely risks. To preserve and protect your hard work
                   against such liabilities, Our team offers the best of plans and policies to ensure the smooth
-                  sailing of all your commercial requirements</p>
+                  sailing of all your commercial requirements.<br>click to know more!</p>
               </div>
               <button type="button" class="showed-content">
                 <img src="assets/images/com.png" alt=""/>
@@ -395,7 +395,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.25s">
-          <p>© Copyright Rakshati. All Rights Reserved. 
+          <p>© Copyright Rakshati FinServ Pvt Ltd. All Rights Reserved. 
           
           <br>The Circle - Huda City Centre
           3rd - 5th floor, Huda City Centre Metro Station, Gurugram, Haryana 122002 <br> +91 76984 58164 <br><a href= mailto:"info@rakshati.in">info@rakshati.in<a/> </p>
