--- a/index.html
+++ b/index.html
@@ -227,6 +227,14 @@
                     Health
                   </div>
               </li>
+              <li class="h-context col-lg-2">
+                <div class="icons">
+                  <img src="assets/images/travel.png" alt="Travel Insurance"/>
+                </div>
+                <div class="icontext">
+                  Travel
+                </div>
+              </li>
                 </div>
               </ul>
             </div>
