--- a/index.html
+++ b/index.html
@@ -197,12 +197,12 @@
           <a>
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.4s">
               <button type="button" class="showed-content">
-                <img src="assets/images/fam.png" alt=""/><br><br>
+                <img src="assets/images/fam.png" alt=""/><br><br><br>
                 <div class="hidden-content">
                   <h4>Personal Insurance</h4>
                   <p>To provide the best of care for you and your loved ones, Rakshati provides a wide range of
                     plans and portfolios to cover for any and all unforeseen events. Ranging from a general health
-                    insurance plan to provide for all your automobile needs, we’ve got you covered.</p><br>Click To See What we Offer!
+                    insurance plan to provide for all your automobile needs, we’ve got you covered.</p>Click To See What we Offer!
                 </div>
               </button>
               <ul class="h-content wow fadeInDown align-self-lg-center">
@@ -249,12 +249,12 @@
           <a>
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.5s">
               <button type="button" class="showed-content">
-                <img src="assets/images/com.png" alt=""/><br><br>
+                <img src="assets/images/com.png" alt=""/><br><br><br>
                 <div class="hidden-content">
                   <h4>Commercial Insurance</h4>
                   <p>Businesses come with anticipatable and likely risks. To preserve and protect your hard work
                     against such liabilities, Our team offers the best of plans and policies to ensure the smooth
-                    sailing of all your commercial requirements</p><br><br>Click To See What we Offer!
+                    sailing of all your commercial requirements</p><br>Click To See What we Offer!
                 </div>
               </button>
               <ul class="h-content wow fadeInDown">
