--- a/index.html
+++ b/index.html
@@ -280,14 +280,16 @@
                   <div class="icontext">
                     GMC
                   </div></div></div>
-              </li>                  <li class="h-context">
+              </li>
+              <li class="h-context">
                 <div class="icons">
                   <img src="assets/images/GPA.webp" alt="family"/>
                   <div class="overlay">
                 <div class="icontext">
                   GPA
                 </div></div></div>
-            </li>                  <li class="h-context">
+            </li>
+            <li class="h-context">
               <div class="icons">
                 <img src="assets/images/WC.webp" alt="family"/>
                 <div class="overlay">
@@ -390,10 +392,12 @@
         </div>
         <div class="phone-info">
           <h4>For any enquiry, Call Us: <span><i><a href="https://wa.me/917698458164"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="contact"></i><bold>+91 76984 58164</bold></a>  / <a href= mailto:"info@rakshati.in">info@rakshati.in</a></span></h4>
-        </div>
-      </div>
+        
+        <div class="links">
+          <h4> <a href="https://www.linkedin.com/company/rakshatifinserv/"><img src="/assets/images/linkedin-96.png" alt="linkedin"></a> <a href="https://www.instagram.com/rakshati_finserv/"><img src="/assets/images/instagram-96.png" alt="instagram"></a></h4></div>
+      </div></div>
     </div>
-  </div>
+  </div><div class="main-blue-button col-lg-12 text-center"><a href="/tnc.html"><h5>Terms and conditions</h5></a></div>
   <footer>
     <div class="container">
       <div class="row">
